# interactive-analysis-tools

./: README.md  drive_index_cache.json  g_factor.ipynb  nanophys_utils.py  pyproject.toml  spin_orbit_coupling.ipynb  spin_orbit_coupling_2.ipynb
.ipynb_checkpoints/: spin_orbit_automated-checkpoint.ipynb  spin_orbit_coupling-checkpoint.ipynb  spin_orbit_coupling_2-checkpoint.ipynb
.virtual_documents/: spin_orbit_automated.ipynb  spin_orbit_coupling.ipynb  spin_orbit_coupling_2.ipynb
Paper 1 Plots Negative Ising/: Plots.ipynb
Paper 1 Plots Negative Ising/.ipynb_checkpoints/: Plots-checkpoint.ipynb
drive_index_cache_files/: cache_02d5a99b58a0692cfbbf55dd01bb714f.json  cache_13bd4ff15a240c96cf1cdcb409115a40.json  cache_751a2bd35bf7a7f27a5c4071ba1c4b51.json  cache_80cdb83d5145bd60f711a1b7d34f17ec.json  cache_907577e4e3a4e61c42a26b20bb10dc08.json  cache_93d6290d576310b543d4ac026425e4b2.json  cache_ad830ef6070a08ffc1ea593a80d8256c.json  cache_c785c6f2e786295df597410257dd37b6.json  cache_d5ec9685f26eb31874b72eb7a526c499.json  cache_ef0127b1a7fa824bd39d318a02e36731.json
old/: main.py  spin_orbit_coupling.ipynb
