[project]
name = "code2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.15.1",
    "ipykernel>=7.1.0",
    "ipympl>=0.10.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pip>=25.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
]
